dark mode fixes

--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -209,7 +209,7 @@
     background-color: transparent;
     border: 0;
     border-radius: 3px;
-    color: var(--color-22);
+    color: var(--color-33);
     font-weight: 500;
 }
 
@@ -239,7 +239,7 @@
     padding: 1px 7px 2px;
     border: 0;
     background-color: transparent;
-    color: var(--color-22);
+    color: var(--color-33);
     text-align: center;
     font-weight: 500;
     z-index: 1500;
@@ -270,5 +270,5 @@
     position: absolute;
     transform: translate(-16px,14px);
     font-size: var(--font-size-smaller);
-    color: var(--color-22);
+    color: var(--color-33);
 }
